--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,18 +6,18 @@
 
 body{
     text-align: center;
-    background-color: #753BBD;
+    background-color: #FFFFFF;
 }
 h1{
     font-family: 'Amatic SC', cursive;
     font-weight: normal;
-    color: #FFFFFF;
+    color: #000000;
     font-size: 2.5em;
 }
 body{
     font-family: 'Helvetica Neue', cursive;
     font-weight: normal;
-    color: #FFFFFF;
+    color: #000000;
     font-size: 1.5em;
 }
 
@@ -33,7 +33,7 @@ body{
   js.src = 'https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.2&appId=1640661359591349&autoLogAppEvents=1';
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<h1>Hello Traveller!</h1>
+<img src="../static/crossfail-roundel.png" width="15%"/>
   <h2>How many hours of your life have you lost due to Crossrail delays? Find out below: </h2>
  {% block body %}{% endblock %}
 
