--- a/templates/good_result.html
+++ b/templates/good_result.html
@@ -3,11 +3,11 @@
  
 <div class="block1">
 
-    Your journey currently takes <b>{{ current_journey_time }} minutes</b> <br>
-    Your journey (with crossrail) will take <b>{{ crossrail_journey_time }} minutes</b> <br>
+    Your journey to work currently takes <b>{{ current_journey_time }} minutes</b> <br>
+    Your journey to work (with Crossrail) will take <b>{{ crossrail_journey_time }} minutes</b> <br>
     That's a saving of <b>{{ saving_minutes_day }} minutes</b> per day <br>
     <b>{{ saving_minutes_week }} minutes</b> per week <br>
-    By the time Crossrail comes around in December 2019, you will have wasted <b>{{ total_hours_wasted }} hours</b> of your life versus the alternate universe in which Crossrail started service in December 2018.
+    By the time Crossrail comes around in December 2019,<br> you will have wasted <b>{{ total_hours_wasted }} hours</b> of your life versus the alternate universe in which Crossrail started service in December 2018.
 </div>
 
 
