--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,7 @@ body{
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 <img src="../static/crossfail-roundel.png" width="15%"/>
-  <h2>How many hours of your life will you lose due to Crossrail delays? Find out below: </h2>
+  <h2>How many hours of your life will you lose due to Crossrail delays?</h2>
  {% block body %}{% endblock %}
 
 <a href="https://twitter.com/intent/tweet?button_hashtag=Crossfail&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #Crossfail</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
