--- a/templates/good_result.html
+++ b/templates/good_result.html
@@ -2,10 +2,9 @@
 {% block body %}
  
 <div class="block1">
-
-    Your journey to work currently takes <b>{{ current_journey_time }} minutes</b> <br>
-    Your journey to work (with Crossrail) will take <b>{{ crossrail_journey_time }} minutes</b> <br>
-    That's a saving of <b>{{ saving_minutes_day }} minutes</b> per day <br>
+    We estimate that your commute from <b>{{ home_postcode }}</b> to <b>{{ work_postcode }}</b> currently takes <b>{{ current_journey_time }} minutes</b> <br>
+    We estimate that your commute (with Crossrail) will take <b>{{ crossrail_journey_time }} minutes</b> <br>
+    Assming you take the tube to and from work, that's a saving of <b>{{ saving_minutes_day }} minutes</b> per day <br>
     <b>{{ saving_minutes_week }} minutes</b> per week <br>
     By the time Crossrail comes around in December 2019,<br> you will have wasted <b>{{ total_hours_wasted }} hours</b> of your life versus the alternate universe in which Crossrail started service in December 2018.
 </div>
