--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,7 +22,14 @@ body{
 }
 
 </style>
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-8886570729026692",
+          enable_page_level_ads: true,
+          data_adtest: "on"
+     });
+</script>
 </head>
 <body>
 <div id="fb-root"></div>
