Use inputs in route

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,9 +4,9 @@
 <div class="block1">
 <b>{{ warning }}</b>
 
-<form method="POST">
-    Home postcode: <input name="home_postcode"> <br>
-    Work postcode: <input name="work_postcode"> <br>
+<form action="result" method="GET">
+    Home postcode: <input name="home"> <br>
+    Work postcode: <input name="work"> <br>
     <input type="submit">
 </form>
 </div>
